<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGrey"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/header_2">

        <ImageView
            android:id="@+id/shop_header_1_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/red_tulip"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/shop_header_1_image_start_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/shop_header_1_text_views"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/shop_header_1_photo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/shop_header_1_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/shop_header_1_content"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/shop_header_1_price"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/shop_header_1_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shop_header_1_price"
                android:textColor="@color/colorWhite"
                android:textSize="32sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/shop_header_1_content" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/shop_header_1_image_start_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".7" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorRose"
        app:layout_constraintTop_toBottomOf="@id/header_1"
        app:layout_constraintBottom_toTopOf="@id/popular_products">

        <ImageView
            android:id="@+id/shop_header_2_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/yellow_mums"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/shop_header_2_image_start_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/shop_header_2_text_views"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/shop_header_2_photo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/shop_header_2_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/shop_header_2_content"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/shop_header_2_price"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/shop_header_2_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shop_header_2_price"
                android:textColor="@color/colorWhite"
                android:textSize="32sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/shop_header_2_content" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/shop_header_2_image_start_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".7" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/popular_products"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/header_2"
        app:layout_constraintBottom_toTopOf="@id/shop_popular_products_horizontal_recycler_view">

        <TextView
            android:id="@+id/shop_popular_products_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/shop_popular_products_text"
            android:textColor="@color/colorWhite"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@id/shop_popular_products_under_line_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/shop_popular_products_under_line_view"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="@id/shop_popular_products_text_view"
            app:layout_constraintStart_toStartOf="@id/shop_popular_products_text_view"
            app:layout_constraintTop_toBottomOf="@id/shop_popular_products_text_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/shop_popular_products_horizontal_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/popular_products"
        app:layout_constraintBottom_toTopOf="@id/recommended"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/recommended"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/shop_popular_products_horizontal_recycler_view"
        app:layout_constraintBottom_toTopOf="@id/shop_recommended_recycler_view">

        <TextView
            android:id="@+id/shop_recommended_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/shop_recommended_text"
            android:textColor="@color/colorWhite"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@id/shop_recommended_under_line_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/shop_recommended_under_line_view"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="@id/shop_recommended_text_view"
            app:layout_constraintStart_toStartOf="@id/shop_recommended_text_view"
            app:layout_constraintTop_toBottomOf="@id/shop_recommended_text_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/shop_recommended_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/recommended"
        app:layout_constraintBottom_toTopOf="@id/halloween"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/halloween"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/shop_recommended_recycler_view"
        app:layout_constraintBottom_toTopOf="@id/shop_halloween_horizontal_recycler_view">

        <TextView
            android:id="@+id/shop_halloween_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/shop_halloween_text"
            android:textColor="@color/colorOrange"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@id/shop_halloween_under_line_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/shop_halloween_under_line_view"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="@color/colorOrange"
            app:layout_constraintEnd_toEndOf="@id/shop_halloween_text_view"
            app:layout_constraintStart_toStartOf="@id/shop_halloween_text_view"
            app:layout_constraintTop_toBottomOf="@id/shop_halloween_text_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/shop_halloween_horizontal_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/halloween"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>